--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.6",
+    "expo-checkbox": "~2.3.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "expo-checkbox": "~2.3.1"
+    "react-native": "0.71.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
